# errant

./: .gitignore  README.md  soul-spec.errant
datalog/: DatalogEngine.hs  Main.hs  Test.hs  errant-datalog.cabal
llm/: test-worm-chain.json
runtime/: errant.h
