cabal-version: 2.4
name: errant-datalog
version: 0.1.0
synopsis: Non-recursive Datalog-inspired validator for SNAPKITTYWEST
description:
  Mirrors the Rust DatalogEngine implementation.
  8-stage evaluation pipeline with WORM seal receipts.
  Linear types enforced at the type level.
license: SOVEREIGN
author: Ahmad Ali Parr
maintainer: ahmad@snapkittywest.io
category: Language, Verification
build-type: Simple

library
  exposed-modules:
    DatalogEngine
  build-depends:
    base >=4.17 && <5,
    bytestring >=0.11,
    cryptonite >=0.30
  hs-source-dirs: .
  default-language: Haskell2010
  ghc-options: -Wall -Werror -O2

executable errant-datalog-cli
  main-is: Main.hs
  build-depends:
    base >=4.17 && <5,
    errant-datalog
  hs-source-dirs: .
  default-language: Haskell2010
  ghc-options: -Wall -Werror -O2

test-suite errant-datalog-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends:
    base >=4.17 && <5,
    errant-datalog
  hs-source-dirs: .
  default-language: Haskell2010
  ghc-options: -Wall -Werror -O2
